CREATE TYPE "doc_type_enum" AS ENUM ('passportScan', 'photoApplicant');

CREATE TYPE "application_field_enum" AS ENUM ('first_name', 'middle_name', 'last_name', 'email', 'phone_number', 'date_of_birth', 'passport_series', 'passport_number', 'date_of_passport_issuance', 'issued_by', 'registration_address', 'residential_address', 'snils', 'inn');

CREATE TYPE "application_status_enum" AS ENUM ('CREATED', 'PENDING', 'APPROVED', 'REJECTED', 'MANUAL_REVIEW', 'ADDITIONAL_INFO_REQUIRED', 'EXPIRED', 'COMPLETED');

CREATE TYPE "debit_account_status_enum" AS ENUM ('ACTIVE', 'CLOSED', 'BLOCKED');

CREATE TYPE "kyc_result_enum" AS ENUM ('approved', 'rejected', 'manual_review');

CREATE TYPE "notification_delivery_method_enum" AS ENUM ('push', 'email', 'sms');

CREATE TYPE "notification_status_enum" AS ENUM ('PENDING', 'SENT');

CREATE TABLE "applicant" (
  "applicant_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50),
  "middle_name" varchar(50),
  "last_name" varchar(50),
  "email" varchar(100),
  "phone_number" varchar(15),
  "date_of_birth" date,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "applicant_documents" (
  "applicant_documents_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int,
  "doc_type" "doc_type_enum",
  "storage_ref" varchar,
  "masked_value" varchar,
  "verified" boolean,
  "created_at" timestamp
);

CREATE TABLE "applicant_sensitive_data" (
  "applicant_sensitive_data_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int UNIQUE,
  "passport_number_encrypted" varchar,
  "passport_series_encrypted" varchar,
  "date_of_passport_issuance_encrypted" varchar,
  "issued_by_encrypted" varchar,
  "registred_address_encrypted" varchar,
  "residential_address_encrypted" varchar,
  "same_as_registration" boolean,
  "snils_encrypted" varchar,
  "inn_encrypted" varchar,
  "created_at" timestamp
);

CREATE TABLE "application" (
  "application_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int,
  "application_number" varchar(20) UNIQUE,
  "status" "application_status_enum",
  "applied_at" timestamp,
  "updated_at" timestamp,
  "additional_info_deadline" timestamp,
  "requested_fields" "application_field_enum"[],
  "requested_documents" "doc_type_enum"[],
  "text_info_received" boolean,
  "documents_received" boolean
);

CREATE TABLE "debit_account" (
  "account_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int UNIQUE,
  "account_number" varchar(20) UNIQUE,
  "balance" decimal(10,2),
  "status" "debit_account_status_enum",
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "application_history" (
  "history_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "status" "application_status_enum",
  "changed_by" varchar(50),
  "changed_at" timestamp
);

CREATE TABLE "kyc_result" (
  "kyc_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "result" "kyc_result_enum",
  "reason_code" varchar(50),
  "checked_at" timestamp
);

CREATE TABLE "notification" (
  "notification_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "message" text,
  "delivery_method" "notification_delivery_method_enum",
  "status" "notification_status_enum",
  "sent_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "idempotency_keys" (
  "idempotency_key" varchar(36) PRIMARY KEY,
  "request_hash" varchar,
  "response_status" int,
  "response_body" jsonb,
  "created_at" timestamp,
  "expires_at" timestamp
);

CREATE TABLE "access_recovery_code" (
  "access_recovery_code_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "code_hash" varchar,
  "expires_at" timestamp,
  "attempts" int,
  "used_at" timestamp
);

CREATE TABLE "application_access_token" (
  "application_id" int PRIMARY KEY,
  "access_token_hash" varchar,
  "issued_at" timestamp
);

COMMENT ON COLUMN "applicant"."email" IS 'Намеренно не UNIQUE: applicant — снимок персональных данных для конкретной заявки, не постоянная переиспользуемая личность. Один человек может подать несколько заявок (в т.ч. с разным email) — каждая создаёт свою строку applicant. Дедупликация по email была бы неверной (email не идентификатор личности), а по документу (паспорт) не реализована — не в скоупе MVP';

COMMENT ON COLUMN "applicant_documents"."storage_ref" IS 'ссылка на зашифрованное хранилище/vault';

COMMENT ON COLUMN "applicant_sensitive_data"."date_of_passport_issuance_encrypted" IS 'дата выдачи паспорта';

COMMENT ON COLUMN "applicant_sensitive_data"."issued_by_encrypted" IS 'орган, выдавший паспорт';

COMMENT ON COLUMN "applicant_sensitive_data"."residential_address_encrypted" IS 'фактический адрес проживания';

COMMENT ON COLUMN "applicant_sensitive_data"."same_as_registration" IS 'совпадает ли фактический адрес с пропиской';

COMMENT ON COLUMN "application_history"."changed_by" IS 'идентификатор менеджера из BearerAuth (JWT), заполняется только для решений в MANUAL_REVIEW; для системных переходов — null';

COMMENT ON TABLE "idempotency_keys" IS 'Idempotency-key на входящих POST (все 6 эндпоинтов). Без FK на application — используется и в POST /application, где заявки ещё не существует. См. ADR-004';

COMMENT ON TABLE "access_recovery_code" IS 'Одноразовый код восстановления доступа (OTP по email). См. ADR-006';

COMMENT ON TABLE "application_access_token" IS 'accessToken вынесен из application в отдельную таблицу намеренно — секрет не должен быть доступен всем запросам, читающим заявку (список/детали для менеджера, отчётность), проще ограничить доступ на уровне таблицы/грантов. См. ADR-005, ADR-006';

COMMENT ON COLUMN "application_access_token"."application_id" IS 'PK = FK на application: один активный токен на заявку, история версий не нужна';

COMMENT ON COLUMN "application_access_token"."access_token_hash" IS 'хеш accessToken (не открытый текст), выдаётся один раз POST /application или .../access-recovery/confirm; действует весь жизненный цикл заявки';

COMMENT ON COLUMN "application_access_token"."issued_at" IS 'момент выдачи текущего accessToken; при .../access-recovery/confirm строка перезаписывается, предыдущий токен инвалидируется. См. ADR-006';

COMMENT ON COLUMN "application"."additional_info_deadline" IS 'вычисляется как момент_перехода_в_ADDITIONAL_INFO_REQUIRED + TTL; заполняется только при status = ADDITIONAL_INFO_REQUIRED, иначе null. См. ADR-003';

COMMENT ON COLUMN "application"."requested_fields" IS 'чек-лист текстовых полей, запрошенных менеджером повторно у клиента (соответствует requestedFields в POST /application/{id}/request-additional-info); заполняется только при status = ADDITIONAL_INFO_REQUIRED, иначе null. См. ADR-003';

COMMENT ON COLUMN "application"."requested_documents" IS 'чек-лист документов, запрошенных менеджером повторно у клиента (соответствует requestedDocuments в POST /application/{id}/request-additional-info); заполняется только при status = ADDITIONAL_INFO_REQUIRED, иначе null. См. ADR-003';

COMMENT ON COLUMN "application"."text_info_received" IS 'true, если клиент через POST /application/{id}/additional-info прислал все поля из requested_fields; сбрасывается в false при каждом новом переходе в ADDITIONAL_INFO_REQUIRED. Если requested_fields пуст — считается закрытым по умолчанию. См. ADR-003';

COMMENT ON COLUMN "application"."documents_received" IS 'true, если клиент через POST /application/{id}/documents прислал все документы из requested_documents; сбрасывается в false при каждом новом переходе в ADDITIONAL_INFO_REQUIRED. Если requested_documents пуст — считается закрытым по умолчанию. См. ADR-003';

ALTER TABLE "applicant_documents" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applicant_sensitive_data" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "debit_account" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application_history" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kyc_result" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notification" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "access_recovery_code" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application_access_token" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;
