Table applicant {
  applicant_id int [pk, increment]
  first_name varchar(50)
  middle_name varchar(50)
  last_name varchar(50)
  email varchar(100)
  phone_number varchar(15)
  date_of_birth date
  created_at timestamp 
  updated_at timestamp 
}

Table applicant_documents {
  applicant_documents_id int [pk, increment]
  applicant_id int [ref: > applicant.applicant_id, not null]
  doc_type enum('passportScan', 'photoApplicant')
  storage_ref varchar [note: 'ссылка на зашифрованное хранилище/vault']
  masked_value varchar
  verified boolean
  created_at timestamp
}

Table applicant_sensitive_data {
  applicant_sensitive_data_id int [pk, increment]
  applicant_id int [ref: - applicant.applicant_id, unique]
  passport_number_encrypted varchar // зашифровано
  passport_series_encrypted varchar // зашифровано
  date_of_passport_issuance_encrypted varchar [note: 'дата выдачи паспорта'] // зашифровано
  issued_by_encrypted varchar [note: 'орган, выдавший паспорт'] // зашифровано
  registred_address_encrypted varchar // зашифровано
  residential_address_encrypted varchar [note: 'фактический адрес проживания']
  same_as_registration boolean [note: 'совпадает ли фактический адрес с пропиской']
  snils_encrypted varchar // зашифровано
  inn_encrypted varchar // зашифровано
  created_at timestamp
}

Table application {
  application_id int [pk, increment]
  applicant_id int [ref: > applicant.applicant_id, not null]
  application_number varchar(20) [unique]
  status enum('CREATED', 'PENDING', 'APPROVED', 'REJECTED', 'MANUAL_REVIEW', 'ADDITIONAL_INFO_REQUIRED', 'EXPIRED', 'COMPLETED')
  applied_at timestamp
  updated_at timestamp
  additional_info_deadline timestamp [note: 'заполняется только при status = ADDITIONAL_INFO_REQUIRED, иначе null']
  requested_fields enum('first_name', 'middle_name', 'last_name', 'email', 'phone_number', 'date_of_birth', 'passport_series', 'passport_number', 'date_of_passport_issuance', 'issued_by', 'registration_address', 'residential_address', 'snils', 'inn')[] [note: 'чек-лист полей, запрошенных повторно; заполняется только при ADDITIONAL_INFO_REQUIRED. См. ADR-003']
  requested_documents enum('passportScan', 'photoApplicant')[] [note: 'чек-лист документов, запрошенных повторно; заполняется только при ADDITIONAL_INFO_REQUIRED. См. ADR-003']
  text_info_received boolean [note: 'true, если все requested_fields получены; сбрасывается при каждом новом ADDITIONAL_INFO_REQUIRED. См. ADR-003']
  documents_received boolean [note: 'true, если все requested_documents получены; сбрасывается при каждом новом ADDITIONAL_INFO_REQUIRED. См. ADR-003']
}

Table debit_account {
  account_id int [pk, increment]
  application_id int [ref: - application.application_id, unique, note: 'applicant достаётся через application.applicant_id — дублирующей прямой ссылки нет намеренно']
  account_number varchar(20) [unique]
  balance decimal(10, 2)
  status enum('ACTIVE', 'CLOSED', 'BLOCKED')
  created_at timestamp
  updated_at timestamp
}

Table application_history {
  history_id int [pk, increment]
  application_id int [ref: > application.application_id, not null]
  status enum('CREATED', 'PENDING', 'APPROVED', 'REJECTED', 'MANUAL_REVIEW', 'ADDITIONAL_INFO_REQUIRED', 'EXPIRED', 'COMPLETED')
  changed_by varchar(50) [note: 'идентификатор менеджера из BearerAuth (JWT), заполняется только для решений в MANUAL_REVIEW; для системных переходов — null']
  changed_at timestamp
}

Table kyc_result {
    kyc_id int [pk, increment]
    application_id int [ref: > application.application_id, not null]
    result enum('approved', 'rejected', 'manual_review')
    reason_code varchar(50)
    checked_at timestamp
}

Table notification {
    notification_id int [pk, increment]
    application_id int [ref: > application.application_id, not null]
    message text
    delivery_method enum('push', 'email', 'sms')
    status enum('PENDING', 'SENT')
    sent_at timestamp
    updated_at timestamp
}

Table idempotency_keys {
  idempotency_key varchar(36) [pk, note: 'UUID от клиента, заголовок Idempotency-key']
  request_hash varchar [note: 'хеш тела запроса, чтобы ловить 409 при несовпадении']
  response_status int
  response_body jsonb
  created_at timestamp
  expires_at timestamp

  Note: 'Idempotency-key на входящих POST (все 6 эндпоинтов). Без FK на application — используется и в POST /application, где заявки ещё не существует. См. ADR-004'
}

Table access_recovery_code {
  access_recovery_code_id int [pk, increment]
  application_id int [ref: > application.application_id, not null]
  code_hash varchar
  expires_at timestamp
  attempts int
  used_at timestamp

  Note: 'Одноразовый код восстановления доступа (OTP по email). См. ADR-006'
}

Table application_access_token {
  application_id int [pk, ref: - application.application_id, note: 'один активный токен на заявку, история версий не нужна']
  access_token_hash varchar [note: 'хеш accessToken, действует весь жизненный цикл заявки']
  issued_at timestamp [note: 'момент выдачи; перезаписывается при .../access-recovery/confirm, старый токен инвалидируется. См. ADR-006']

}